<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/fourth">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/needyfeedy"
    android:text="NeedyFeedy"
    android:textColor="@color/black"
    android:textSize="35sp"
    android:textStyle="bold"
    android:layout_marginTop="50dp"
    android:layout_marginStart="30dp"
    android:gravity="fill_vertical" />
    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup"
        android:layout_margin="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="28dp"
        android:text="@string/create"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/needyfeedy"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="2dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/editTextUsername"
    android:layout_below="@id/create"
    android:background="#40ffffff"
    android:hint="@string/editTextUsername"

    android:textColorHint="@color/black"
    android:textColor="@color/black"
    android:textSize="15sp"
    android:layout_margin="10dp"
    android:padding="20dp"
        android:autofillHints="username"
        android:inputType="text"
    android:drawableStart="@drawable/baseline_person_outline_24"
    android:drawablePadding="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMobile"
        android:layout_below="@id/editTextUsername"
        android:background="#40ffffff"
        android:hint="@string/editTextMobile"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:autofillHints="phone"
        android:inputType="phone"
        android:drawableStart="@drawable/baseline_call_24"
        android:drawablePadding="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:layout_below="@id/editTextMobile"
        android:background="#40ffffff"
        android:hint="@string/editTextEmail"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:autofillHints="emailAddress"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="20dp" />


<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/editTextPassword"
    android:layout_below="@id/editTextEmail"
    android:background="#40ffffff"
    android:hint="@string/editTextPasssword"
    android:textColorHint="@color/black"
    android:textColor="@color/black"
    android:textSize="15sp"
    android:layout_margin="10dp"
    android:autofillHints="password"
    android:padding="20dp"
    android:inputType="textPassword"
    android:drawableStart="@drawable/baseline_lock_24"
    android:drawablePadding="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmpassword"
        android:layout_below="@id/editTextPassword"
        android:background="#40ffffff"
        android:hint="@string/confirmpassword"
        android:textColorHint="@color/black"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="20dp" />




<Button
    android:id="@+id/buttonRegister"
    android:layout_width="168dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/confirmpassword"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="32dp"
    android:background="@color/black"
    android:padding="10dp"
    android:textStyle="bold"
    android:text="@string/buttonRegister"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:textSize="15sp" />


</RelativeLayout>